--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                            <label for="select-box1" class="label select-box1"><span class="label-desc">English</span>
                            </label>
                            <select id="select-box1" class="select">
-                              <option value="Choice 1">English</option>
-                              <option value="Choice 1">Hindi</option>
-                              <option value="Choice 2">Punjabi</option>
-                              <option value="Choice 3">Marathi</option>
+                              <option value="Choice 1" class="p-3 mb-2 bg-primary text-white">English</option>
+                              <option value="Choice 1" class="p-3 mb-2 bg-primary text-white">Hindi</option>
+                              <option value="Choice 2" class="p-3 mb-2 bg-primary text-white">Punjabi</option>
+                              <option value="Choice 3" class="p-3 mb-2 bg-primary text-white">Marathi</option>
                            </select>
                         </div>
                      </form>
@@ -106,7 +106,7 @@
                </div>
             </div>
          </div>
-         <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-primary">
+         <nav id="navbar_top" class=" navbar-expand-lg navbar-dark bg-primary">
             <div class="header_bo">
                <div class="container">
                   <div class="row">
@@ -496,7 +496,7 @@
                               <div class="row">
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team1.png" alt="#" />
+                                       <img src="images/team1.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -510,7 +510,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team2.png" alt="#" />
+                                       <img src="images/team2.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -524,7 +524,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6 d_none1">
                                     <div id="ho_bg" class="team_img ">
-                                       <img src="images/team3.png" alt="#" />
+                                       <img src="https://sachin12031999.github.io/sachinportfolio.github.io/img/About.jpg" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -546,7 +546,7 @@
                               <div class="row">
                                  <div class="col-md-4 col-sm-6 d_none1">
                                     <div id="ho_bg" class="team_img ">
-                                       <img src="images/team1.png" alt="#" />
+                                       <img src="images/team1.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -560,7 +560,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team2.png" alt="#" />
+                                       <img src="images/team2.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -574,7 +574,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team3.png" alt="#" />
+                                       <img src="images/team3.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -596,7 +596,7 @@
                               <div class="row">
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team1.png" alt="#" />
+                                       <img src="images/team1.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -610,7 +610,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6 d_none1">
                                     <div id="ho_bg" class="team_img ">
-                                       <img src="images/team2.png" alt="#" />
+                                       <img src="images/team2.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -624,7 +624,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team3.png" alt="#" />
+                                       <img src="images/team3.png" class="pic" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -653,6 +653,135 @@
       </div>
    </div>
    <!-- end team  section -->
+
+   <!-- <section> -->
+
+   <section class="container-fluid training">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <h2 class="text-white font-weight-bold">Our Training / Internship Programs in Bhopal Branch</h2>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-6">
+               <ul>
+                  <li>
+                     <i class="fa fa-angle-double-right  "></i>
+                     <a href="java-j2se-training-certification-course-jodhpur.html" class="text-white" title="Java Training"> Java
+                        Training</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right"></i>
+                     <a href="html-css-training-certification-course-jodhpur.html" class="text-white" title="HTML"> HTML </a> ,<a
+                        href="html5-css3-training-certification-course-jodhpur.html" class="text-white" title="HTMl5"> HTMl5</a>,<a
+                        href="html-css-training-certification-course-jodhpur.html" class="text-white" title="CSS"> CSS </a>,<a
+                        href="html5-css3-training-certification-course-jodhpur.html" class="text-white" title="CSS3"> CSS3 </a>, <a class="text-white"
+                        href=""> js</a>,
+                     <a href="" class="text-white" > Ajax
+                     </a>, <a href="javascript-training-certification-course-jodhpur.html" class="text-white" title="jQuery"> jQuery </a>,
+                     <a href="bootstrap-training-certification-course-jodhpur.html" class="text-white" title="Bootstrap"> Bootstrap </a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="php-training-certification-course-jodhpur.html" class="text-white" title="Php ,Mysqli Training"> Php,Mysqli
+                        Training</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="web-development-training-certification-course-jodhpur.html" class="text-white" title="Website Development">
+                        Website
+                        Development</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="website-designing-training-certification-jodhpur.html" class="text-white" title="Website Designing"> Website
+                        Designing</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="graphics-designing-training-certification-jodhpur.html" class="text-white" title="Graphic Designing"> Graphic
+                        Designing</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="seo-training-certificate-jodhpur.html" class="text-white" title="SEO"> SEO </a>, <a
+                        href="smo-training-certification-jodhpur.html" class="text-white" title="SMO"> SMO </a>, <a
+                        href="smo-training-certification-jodhpur.html" class="text-white" title="PPC"> PPC </a>, <a href="" class="text-white"> EMail
+                        Marketing
+                        Training</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="industrial-automation-training-institute-jodhpur.html" class="text-white" title="PLC-SCADA"> PLC-SCADA</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="robotics-training-institute-jodhpur.html" class="text-white" title="Robotics"> Robotics</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="matlab-training-institute-jodhpur.html" class="text-white" title="Matlab"> Matlab</a>
+                  </li>
+               </ul>
+            </div>
+            <div class="col-md-6">
+               <ul>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="wordpress-development-training-certification-jodhpur.html" class="text-white" title="Wordpress">
+                        Wordpress</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="python-training-certificate-course-jodhpur.html" class="text-white" title="Python"> Python</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="big-data-training-certification-course-jodhpur.html" class="text-white" title="Big Data(Hadoop)"> Big
+                        Data(Hadoop)</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="codeigniter-development-training-certification-jodhpur.html" class="text-white" title="CodeIgniter">
+                        CodeIgniter</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="laravel-development-training-certification-jodhpur.html" class="text-white" title="Laravel"> Laravel</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="#" class="text-white" title="Software Testing (Manual &amp; Automation)"> Software Testing (Manual &amp;
+                        Automation)</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="iOS-app-development-training-certification-course-jodhpur.html"
+                        class="text-white" title="iPhone App Development Training"> iPhone App Development
+                        Training</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="android-app-development-training-certification-course-jodhpur.html"
+                        class="text-white" title="Android App Development Training"> Android App Development
+                        Training</a>
+                  </li>
+                  <li>
+                     <i class="fa fa-angle-double-right "></i>
+                     <a href="digital-marketing-training-certification-jodhpur.html" class="text-white" title="Digital Marketing Training">
+                        Digital
+                        Marketing
+                        Training</a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <!-- </section> -->
+
    <!-- testimonial -->
    <div id="client" class="testimonial">
       <div class="container">
@@ -775,13 +904,12 @@
                <div class="col-lg-5 col-md-6 col-sm-6">
                   <h3>Contact Us</h3>
                   <ul class="location_icon">
-                     <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> London 145
-                        <br> United Kingdom
+                     <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> MP Nagar Bhopal
+                        <br> Madhya Pradesh
                      </li>
-                     <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com<br>
-                        demo@gmail.com</li>
-                     <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+01
-                        1234567890<br>+01 1234567889</li>
+                     <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>info@itcian.com<br>
+                        hr@itcian.com</li>
+                     <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+91 8319697083<br>+91 8319697083</li>
                   </ul>
                   <ul class="social_icon">
                      <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
